[#36] Fixed style/spacing errors for various components.
Couldn't deal with all the error mesages. Still have more to fix. But good for now.

--- a/client/components/ui/flip-box/flip-box.less
+++ b/client/components/ui/flip-box/flip-box.less
@@ -49,29 +49,22 @@
 }
 
 :host([animation="vertical"]){
-  .flipbox-container {
-    -webkit-transform-origin: right center;
-    -moz-transform-origin: right center;
-    transform-origin: right center;
-  }
-
   .flipbox-container.flip {
-    -webkit-transform: translateX( -90% ) rotateY( -180deg );
-    -moz-transform: translateX( -90% ) rotateY( -180deg );
-    transform: translateX( -90% ) rotateY( -180deg );
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    transform: rotateY(180deg);
   }
 }
 
 :host([animation="horizontal"]){
-  .flipbox-container {
-    -webkit-transform-origin: right center;
-    -moz-transform-origin: right center;
-    transform-origin: right center;
+  .box {
+    height: 360px;
+    width: 400px;
   }
 
   .flipbox-container.flip {
-    -webkit-transform: rotateX( -180deg ) translateY( -90% );
-    -moz-transform: rotateX( -180deg ) translateY( -90% );
-    transform: rotateX( -180deg ) translateY( -90% );
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    transform: rotateY(180deg);
   }
 }
